add the support of JDK 17 (LTS)